# side-stacker

./: README.md
backend/: README.md  pyproject.toml
backend/side_stacker/: app.py  database.py  game_manager.py  models.py  side_stacker.py
backend/tests/: test_side_stacker.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  Board.js  Game.js  index.js  routes.js
frontend/src/components/: Board.css  Board.js  BoardPiece.js  BoardSide.js
